# genesys-dice-roller

./: Cargo.toml  README.md
src/: dice.rs  dice_result.rs  dice_set.rs  die_face.rs  error.rs  lib.rs  roll.rs
